--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ steps:
 
 - script: |
     npm install
-    npm install -g @angular/cli
+    npm install -g @angular/cli@9.1.1
     ng build --prod 
   displayName: 'npm install and build'
 
