--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,9 @@ steps:
 - script: |
     npm install
     npm install -g @angular/cli@9.1.1
-    ng build --prod 
+    ng build --prod
+    INVALIDATION_ID=$(aws cloudfront create-invalidation --distribution-id E1PDWZPR0W2KAS --paths '/*' | jq '.Invalidation | .Id' | cut -d \" -f2)
+    aws cloudfront wait invalidation-completed --id $INVALIDATION_ID --distribution-id E1PDWZPR0W2KAS
   displayName: 'npm install and build'
 
 - task: PublishBuildArtifacts@1
