--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,5 +24,5 @@ steps:
 - task: PublishBuildArtifacts@1
   inputs:
     artifactName: drop
-    pathtoPublish: 'dist'
-     displayName: 'Publish Artifacts'
+    pathtoPublish: 'ist'
+    displayName: 'Publish Artifacts'
